Skip -> Pass + order of queue

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </tr>
             <tr style="height: 25%;">
                 <td colspan="6">
-                    <button id="skipButton">SKIP</button>
+                    <button id="skipButton">PASS</button>
                 </td>
             </tr>
         </table>
